# rust-novel-agents

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: autoclean.yml  build.yml  release.yml
src/: cli.rs  config.rs  main.rs
src/agents/: memory_agent.rs  mod.rs  outline_agent.rs  writer_agent.rs
src/core/: llm.rs  memory_db.rs  mod.rs
